--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Landing Page</title>
     </head>
     <body class="main-bg">
-        <aside class="menu">
+        <aside class="menu white-bg">
             <section class="main-content menu-content">
                 <h1>
                     <a href="#">LOGO</a>
@@ -29,7 +29,7 @@
             </section>
         </aside>
 
-        <section class="section white-bg"></section>
+        <section class="section"></section>
         <section class="section"></section>
     </body>
 </html>
