--- a/index.html
+++ b/index.html
@@ -72,10 +72,33 @@
             </div>
         </section>
 
-        <section id="gallery" class="section white-bg">
-            <div class="main-content">
-                <h1>Teste</h1>
+        <section id="gallery" class="grid-one white-bg section">
+            <div class="main-content grid-one-content">
+                <h2 class="grid-main-heading">Gallery</h2>
+                <p class="grid-description">Uma breve descrição</p>
+                <div class="grid">
+                    <div class="gallery-img">
+                       <img src="http://source.unsplash.com/random/360x360?r=1" alt="random image from unsplash">
+                    </div>
+                    <div class="gallery-img">
+                        <img src="http://source.unsplash.com/random/360x360?s=1" alt="random image from unsplash">
+                    </div>
+                    <div class="gallery-img">
+                        <img src="http://source.unsplash.com/random/360x360?t=1" alt="random image from unsplash">
+                    </div>
+                    <div class="gallery-img">
+                       <img src="http://source.unsplash.com/random/360x360?u=1" alt="random image from unsplash">
+                    </div>
+                    <div class="gallery-img">
+                        <img src="http://source.unsplash.com/random/360x360?v=1" alt="random image from unsplash">
+                    </div>
+                    <div class="gallery-img">
+                        <img src="http://source.unsplash.com/random/360x360?x=1" alt="random image from unsplash">
+                    </div>
+                </div>
             </div>
         </section>
+
+        
     </body>
 </html>
