--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <li><a href="#intro">Intro</a></li>
                         <li><a href="#grid-one">Grid-one</a></li>
                         <li><a href="#gallery">Gallery</a></li>
+                        <li><a href="#pricing">Pricing</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -99,6 +100,59 @@
             </div>
         </section>
 
-        
+        <section id="pricing" class="main-bg section">
+            <div class="main-content top3-content">
+                <h2>Pricing</h2>
+                <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some surprises at the machine’s performance. This post details some background information on the experience of porting Firefox to run natively on these CPUs.</p>
+                <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
+                
+                <div class="responsive-table">
+                    <table>
+                        <caption>Pricing table</caption>
+                        <thead>
+                            <tr>
+                                <th>title 1</th>
+                                <th>title 2</th>
+                                <th>title 3</th>
+                                <th>title 4</th>
+                                <th>title 5</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Content 1</td>
+                                <td>Content 2</td>
+                                <td>Content 3</td>
+                                <td>Content 4</td>
+                                <td>Content 5</td>
+                            </tr>
+                            <tr>
+                                <td>Content 1</td>
+                                <td>Content 2</td>
+                                <td>Content 3</td>
+                                <td>Content 4</td>
+                                <td>Content 5</td>
+                            </tr>
+                            <tr>
+                                <td>Content 1</td>
+                                <td>Content 2</td>
+                                <td>Content 3</td>
+                                <td>Content 4</td>
+                                <td>Content 5</td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td>Testando</td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
+            </div>
+        </section>    
     </body>
 </html>
