--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <title>Landing Page</title>
     </head>
-    <body class="main-bg">
-        <aside class="menu white-bg">
+    <body>
+        <aside class="menu light-gray-bg">
             <div class="main-content menu-content">
                 <h1>
                     <a href="#home">LOGO</a>
@@ -23,7 +23,7 @@
                         <li><a href="#grid-one">Grid-one</a></li>
                         <li><a href="#gallery">Gallery</a></li>
                         <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -153,6 +153,47 @@
                     </table>
                 </div>
             </div>
-        </section>    
+        </section>
+        
+        <section id="contact" class="intro white-bg section">
+            <div class="main-content intro-content">
+                <div class="intro-text-content">
+                    <h2>January brings up Firefox 85</h2>
+                    <p>To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing you suport for :focus-visible pseudo-class in CSS and associated devtools, and the complete removal of Flash support from Firefox</p>
+                </div>
+                <div class="intro-img">
+                    <img src="assets/img/javascript-not-optimized.svg" alt="Logo de HTML, CSS e JS">
+                </div>
+                <div class="contact-form"> 
+                   <fieldset class="form-grid">
+                       <legend>Contact me</legend>
+
+                       <div class="form-group">
+                           <label for="first-name">First Name</label>
+                           <input type="text" name="first-name" id="first-name" placeholder="your name">
+                       </div>
+                       <div class="form-group">
+                           <label for="last-name">Last Name</label>
+                           <input type="text" name="last-name" id="last-name" placeholder="your last name">
+                       </div>
+                       <div class="form-group">
+                           <label for="email">Email</label>
+                           <input type="email" name="email" id="email" placeholder="your e-mail">
+                       </div>
+                       <div class="form-group full-width">
+                           <label for="message">Message</label>
+                           <textarea name="message" id="message" cols="30" rows="10" placeholder="your message"></textarea>
+                       </div>
+                       <div class="form-group full-width">
+                           <button type="submit">Send message</button>
+                       </div>
+                   </fieldset>
+                </div>
+            </div>
+        </section>
+
+        <footer id="footer" class="footer light-gray-bg">
+            <p>Feito com <span class="heart">❤</span> por Marcelo Carneiro</p>
+        </footer>
     </body>
 </html>
