--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <title>Landing Page</title>
     </head>
     <body>
+        <input id="close-menu" class="close-menu" type="checkbox" aria-label="close menu" role="button">
+        <label class="close-menu-label" for="close-menu" title="close menu"></label>
         <aside class="menu light-gray-bg">
             <div class="main-content menu-content">
-                <h1>
+                <h1  onclick="getElementById('close-menu').checked = false;">
                     <a href="#home">LOGO</a>
                 </h1>
                 <nav>
-                    <ul>
+                    <ul onclick="getElementById('close-menu').checked = false;">
                         <li><a href="#intro">Intro</a></li>
                         <li><a href="#grid-one">Grid-one</a></li>
                         <li><a href="#gallery">Gallery</a></li>
@@ -195,5 +197,7 @@
         <footer id="footer" class="footer light-gray-bg">
             <p>Feito com <span class="heart">❤</span> por Marcelo Carneiro</p>
         </footer>
+
+        <a class="back-to-top" href="#">➤</a>
     </body>
 </html>
